# fastapi_backend

./: .env  .gitignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: routers.py
backend/app/api/endpoints/: ollama.py  user.py
backend/app/crud/: user.py
backend/app/db/: base.py  session.py
backend/app/models/: user.py
backend/app/schemas/: user.py
backend/app/services/: ollama_service.py  user_service.py
k8s/: deployment.yaml
