[project]
name = "fastapi_backend"
version = "0.1.0"
description = ""
authors = [
    {name = "baejvv",email = "jwbae0@naver.com"}
]
license = {text = "Apache"}
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "annotated-types (==0.7.0)",
    "anyio (==4.8.0)",
    "bcrypt (==4.2.1)",
    "build (==1.2.2.post1)",
    "cachecontrol (==0.14.2)",
    "certifi (==2025.1.31)",
    "cffi (==1.17.1)",
    "charset-normalizer (==3.4.1)",
    "cleo (==2.1.0)",
    "click (==8.1.8)",
    "crashtest (==0.4.1)",
    "distlib (==0.3.9)",
    "dulwich (==0.22.7)",
    "fastapi (==0.115.8)",
    "fastjsonschema (==2.21.1)",
    "filelock (==3.17.0)",
    "findpython (==0.6.2)",
    "gunicorn (==23.0.0)",
    "h11 (==0.14.0)",
    "httpcore (==1.0.7)",
    "httpx (==0.28.1)",
    "idna (==3.10)",
    "installer (==0.7.0)",
    "jaraco-classes (==3.4.0)",
    "jaraco-context (==6.0.1)",
    "jaraco-functools (==4.1.0)",
    "keyring (==25.6.0)",
    "more-itertools (==10.6.0)",
    "msgpack (==1.1.0)",
    "packaging (==24.2)",
    "passlib (==1.7.4)",
    "pbs-installer (==2025.2.12)",
    "pkginfo (==1.12.1.2)",
    "platformdirs (==4.3.6)",
    "poetry (==2.1.1)",
    "poetry-core (==2.1.1)",
    "pycparser (==2.22)",
    "pydantic (==2.10.6)",
    "pydantic-core (==2.27.2)",
    "pymysql (==1.1.1)",
    "pyproject-hooks (==1.2.0)",
    "python-dotenv (==1.0.1)",
    "rapidfuzz (==3.12.1)",
    "requests (==2.32.3)",
    "requests-toolbelt (==1.0.0)",
    "shellingham (==1.5.4)",
    "sniffio (==1.3.1)",
    "sqlalchemy (==2.0.38)",
    "starlette (==0.45.3)",
    "tomlkit (==0.13.2)",
    "trove-classifiers (==2025.2.18.16)",
    "typing-extensions (==4.12.2)",
    "urllib3 (==2.3.0)",
    "uvicorn (==0.34.0)",
    "virtualenv (==20.29.2)",
    "xattr (==1.1.4)",
    "zstandard (==0.23.0)",
    "cryptography (>=44.0.1,<45.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
